--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-contrib-copy": "^0.1.2",
     "gulp-hash-src": "^0.1.6",
+    "gulp-html-i18n": "^0.14.0",
+    "gulp-html-replace": "^1.6.2",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-js-minify": "0.0.3",
@@ -21,11 +23,13 @@
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^1.0.0",
     "gulp-util": "^3.0.8",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "jquery": "3.2.1",
+    "jquery.tmpl": "0.0.2",
     "remodal": "1.1.1",
     "slick-carousel": "^1.8.1",
     "youtube-api-v3-search": "^1.0.2"
