--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
     "gulp-util": "^3.0.8",
+    "run-sequence": "^2.2.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
