--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "bluebird": "^3.4.6",
+    "browser-sync": "^2.26.3",
     "browserify": "^13.1.1",
     "cropperjs": "^1.0.0-rc",
     "gulp": "^3.9.1",
